--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -19,7 +19,7 @@ jobs:
     outputs:
       commit_message: ${{ steps.get_message.outputs.message }}
     name: Check if the workflow has been disabled.
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: Get commit message
@@ -35,14 +35,14 @@ jobs:
         include:
           - distro: stable
             container: debian:stable
-          - distro: unstable
-            container: debian:unstable
           - distro: jammy
             container: ubuntu:jammy
+          - distro: focal
+            container: ubuntu:focal
     needs: check_commit_msg
     if: ${{ !contains( needs.check_commit_msg.outputs.commit_message, '!DEB') }}
     name: Build debian package for ${{ matrix.distro }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container: ${{ matrix.container }}
     env:
       DEBIAN_FRONTEND: noninteractive
@@ -83,64 +83,11 @@ jobs:
           name: ${{ matrix.distro }}
           path: ${{ steps.get_package.outputs.NAME }}
 
-  build-cross:
-    strategy:
-      fail-fast: false
-      matrix:
-        distro: [stable]
-        arch: [arm64, armhf, mips64el]
-    needs: check_commit_msg
-    if: ${{ !contains( needs.check_commit_msg.outputs.commit_message, '!DEB') }}
-    name: Build debian package for ${{ matrix.distro }} ${{ matrix.arch }}
-    runs-on: ubuntu-latest
-    container: debian:${{ matrix.distro }}
-    env:
-      DEBIAN_FRONTEND: noninteractive
-
-    steps:
-      - name: Install git
-        run: |
-          apt-get update
-          apt-get install -y git
-      - name: Checking out sources
-        uses: actions/checkout@v2
-        with:
-          submodules: "recursive"
-      - name: Install build dependencies
-        run: |
-          dpkg --add-architecture ${{ matrix.arch }}
-          apt-get update
-          apt-get install -o APT::Immediate-Configure=0 -y build-essential crossbuild-essential-${{ matrix.arch }} devscripts debhelper ninja-build libgrpc++-dev:${{ matrix.arch }} libprotobuf-dev:${{ matrix.arch }} protobuf-compiler-grpc qtbase5-dev:${{ matrix.arch }} qttools5-dev:${{ matrix.arch }} cmake pkg-config qtdeclarative5-dev:${{ matrix.arch }} libcurl4-openssl-dev:${{ matrix.arch }} libqt5svg5-dev:${{ matrix.arch }}
-      - name: Patching source code
-        if: matrix.distro == 'stable'
-        run: |
-          patch -p1 < debian/0001-add-missing-macro.patch
-      - name: Bump version
-        if: github.event_name != 'release'
-        run: |
-          dch -v "$(date +'%Y%m%d%H%M%S')-1" -D unstable -m 'Automatic build'
-      - name: Build
-        run: |
-          dch -l${{ matrix.distro }} -m 'Build against ${{ matrix.distro }}' -D ${{ matrix.distro }}
-          dpkg-buildpackage -a${{ matrix.arch }} -us -uc -i -b -d
-      - name: Copy binary
-        run: |
-          cp ../qv2ray_*.deb ./
-      - name: Get package name
-        id: get_package
-        run: echo ::set-output name=NAME::$(basename qv2ray_*.deb)
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ matrix.distro }}-${{ matrix.arch }}
-          path: ${{ steps.get_package.outputs.NAME }}
-
   upload:
     needs: [check_commit_msg, build, build-cross]
     if: ${{ always() }} && ${{ !contains( needs.check_commit_msg.outputs.commit_message, 'NO_DEB') }}
     name: Upload debian packages
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/download-artifact@v2
         with:
